<resources>
    <string name="app_name" translatable="false">Todo.txt + GDrive</string>
    <string name="action_settings">Settings</string>
    <string name="priority">Priority</string>
    <string name="task_description">Task description</string>
    <string name="task_date">Date</string>
    <string name="date">Date</string>
    <string name="project">Project</string>
    <string name="context">Context</string>
    <string name="delete_task">Delete</string>
    <string name="edit_task">Edit</string>
    <string name="complete_task">Complete task</string>
    <string-array name="list_item_actions">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="priorities">
        <item>-</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string name="pref_creationDate" translatable="false">pref_creationDate</string>
    <string name="pref_completionDate" translatable="false">pref_completionDate</string>
    <string name="action_perform_sync">Sync with GDrive</string>
</resources>
