<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_margin="2dp"
              android:background="#FFFFFF"
    >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/completion_check_box"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:focusable="false"
            />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_layout"
        android:layout_margin="3dp"
        >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/task_description"
                android:id="@+id/description_view"
                android:textColor="#000000"
                android:layout_margin="2dp"
                android:focusable="false"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textSize="15sp"
                android:enabled="true"
                android:id="@+id/priority_view"
                android:textColor="#111100"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_date"
                android:textSize="15sp"
                android:id="@+id/date_view"
                android:enabled="true"
                android:textColor="#000000"
                android:layout_margin="2dp"
                android:focusable="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/context"
                android:id="@+id/context_view"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project"
                android:id="@+id/project_view"
                android:layout_margin="2dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>